@@ -749,7 +749,7 @@ static apr_status_t ef_output_filter(ap_filter_t *f, apr_bucket_brigade *bb)
 
 #if 0
 static int ef_input_filter(ap_filter_t *f, apr_bucket_brigade *bb, 
-                           ap_input_mode_t mode)
+                           ap_input_mode_t mode, apr_size_t *readbytes)
 {
     apr_status_t rv;
     apr_bucket *b;
@@ -757,7 +757,7 @@ static int ef_input_filter(ap_filter_t *f, apr_bucket_brigade *bb,
     apr_ssize_t len;
     char *zero;
 
-    rv = ap_get_brigade(f->next, bb, mode);
+    rv = ap_get_brigade(f->next, bb, mode, readbytes);
     if (rv != APR_SUCCESS) {
         return rv;
     }
